fixed: broken style polluting global scope

--- a/src/apps/blueprints/src/components/BlueprintCard/BlueprintCard.less
+++ b/src/apps/blueprints/src/components/BlueprintCard/BlueprintCard.less
@@ -1,10 +1,11 @@
 @import '../../../../../shell/styles/colors.less';
-
-.BlueprintAction {
-  display: flex;
-  justify-content: space-between;
-}
-img {
-  margin: 0 0 0.5rem;
-  width: 100%;
+.BlueprintCard {
+  .BlueprintAction {
+    display: flex;
+    justify-content: space-between;
+  }
+  img {
+    margin: 0 0 0.5rem;
+    width: 100%;
+  }
 }
